<resources>
    <string name="app_name">Android Learning</string>
    <string name="click">click</string>
    <string name="some_text_here">Some Text here…</string>
    <string name="roll">roll</string>
    <string name="todo">TODO</string>
    <string name="child_1">child 1</string>
    <string name="child_2">child 2</string>
    <string name="about_us">about_us</string>
    <string name="about_me">hello this is zain shakeel and i am learning the Android Development from WsCube Tech</string>
    <string name="contact_me">Contact Me</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_your_weight">Enter Your Weight</string>
    <string name="enter_height_ft">Enter Height (FT)</string>
    <string name="enter_height_in">Enter Height (In.)</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="result">Result</string>
    <string name="over_weight">You\'re Over Weight</string>
    <string name="under_weight">You\'re Under Weight</string>
    <string name="healthy">You\'re Healthy!</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="android_learning">Android Learning</string>
    <string name="translate">Translate</string>
    <string name="alpha">Alpha</string>
    <string name="scale">Scale</string>
    <string name="rotate">Rotate</string>
    <string name="select_an_id_proof">Select An ID proof</string>
    <string name="search_here">Search here..</string>
    <string name="animations">Animations</string>
    <string name="intents">Intents</string>
    <string name="listviews">ListViews</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="card_view">Card View</string>
    <string name="recycler_view">Recycler View</string>
    <string name="contact_image">contact image</string>
    <string name="contact_name">Contact Name</string>
    <string name="show_dialog">show dialog</string>
    <string name="add_contact">Add/Update Contact</string>
    <string name="enter_number">Enter Number</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="custom_toolbar">Custom Toolbar</string>
    <string name="new_file">New File</string>
    <string name="open_file">Open File</string>
    <string name="save_file">Save File</string>
    <string name="custom_drawable_buttons">Custom Drawable Buttons</string>
    <string name="custom_toast">Custom Toast</string>
    <string name="show_toast">Show Toast</string>
    <string name="this_is_custom_toast">This is Custom Toast</string>
    <string name="toast_image">Toast Image</string>
    <string name="simple_toast">Simple Toast</string>
    <string name="custom_snack_bar">Custom Snack bar</string>
    <string name="simple_snack_bar">Simple Snack bar</string>
    <string name="alert_dialogs">Alert Dialogs</string>
    <string name="single_button_dialog">Single Button Dialog</string>
    <string name="two_button_dialog">Two Button Dialog</string>
    <string name="three_button_dialog">Three Button Dialog</string>
    <string name="this_is_custom_text">This is Custom text</string>
    <string name="dialog_image">dialog image</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="okay">Okay</string>
    <string name="notifications">Notifications</string>
    <string name="notify">notify</string>
    <string name="implicit_intents">Implicit Intents</string>
    <string name="dialer">Dialer</string>
    <string name="email">Email</string>
    <string name="share">Share</string>
    <string name="message">Message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_email">zainshakeel300@gmail.com</string>
    <string name="drawer_image">drawer image</string>


    <string name="openDrawer">Open Navigation Drawer</string>
    <string name="closeDrawer">Close Navigation Drawer</string>
    <string name="login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>