<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".implicitintents.ImplicitIntentsActivity">

    <Button
        android:id="@+id/dialerBtn"
        android:text="@string/dialer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/emailBtn"
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/shareBtn"
        android:text="@string/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/msgBtn"
        android:text="@string/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>