<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".customtoast.CustomToastActivity">

    <Button
        android:id="@+id/toastBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_toast"/>
    <Button
        android:id="@+id/customToastBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_toast"/>
    <Button
        android:id="@+id/snackBarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_snack_bar"/>
    <Button
        android:id="@+id/customSnackBarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_snack_bar"/>


</LinearLayout>