<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:gravity="bottom"
    android:padding="20dp"
    android:background="@color/colorAccent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/drawer_image"
        android:src="@drawable/custom_dialog_shape"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/android_learning"
        android:textSize="21sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_email"
        android:textColor="#C5C5C5"
        android:textSize="16sp"
        />

    

</LinearLayout>