<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".alertdialogs.AlertDialogsActivity">

    <Button
        android:id="@+id/singleButtonDialogBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_button_dialog"
        />
    <Button
        android:id="@+id/twoButtonDialogBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_button_dialog"
        />
    <Button
        android:id="@+id/customDialogBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog"
        />

</LinearLayout>