<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog_shape"
    android:id="@+id/customDialogLinearLayout"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/customDialogImage"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:contentDescription="@string/dialog_image"
        android:src="@drawable/ic_done"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/customDialogTitleTextView"
            android:layout_width="match_parent"
            android:text="@string/this_is_custom_text"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#2196F3"
            android:layout_margin="30dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/customDialogDescTextView"
            android:layout_width="match_parent"
            android:text="@string/this_is_custom_text"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#252525"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="11dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/customDialogDismissBtn"
        android:layout_width="match_parent"
        android:text="@string/okay"
        android:textColor="@color/white"
        android:textSize="18sp"

        android:background="#2196F3"
        android:layout_height="wrap_content"/>

</LinearLayout>